--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "nanospinner": "^1.0.0"
   }
 }
